# ADC_MCP3425

./: .gitignore  README.md  install.sh  test.py  v_mon.sh  wrapper.src
docs/pcb/: MCP3425-1.brd  MCP3425-1.sch
lib/: entry_points.cfg  setup.cfg
lib/adc_mcp3425/: __init__.py  __main__.py  sensor_watcher.py
tests/: .pylintrc  MCP3425.py  test1.py  test2.py
