[metadata]
name = adc_mcp3425
version = attr: adc_mcp3425.__version__
author = Yoichi Tanibayashi
author_email = yoichi@tanibayashi.jp
description = adc_mcp3425: ADC MCP3425
long_description = file: README.md
url = https://github.com/ytani01/ADC_MCP3425.git
license = MIT
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    
[options]
zip_safe = False
packages = find:
install_requires =
    pigpio
    click
entry_points = file: entry_points.cfg
